--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -20,6 +20,12 @@ h1 {
     font-size: 6rem;
 }
 
+h2{
+    font-size: 3rem;
+    text-align: center;
+    padding-top: 100px;
+}
+
 .app {
     width: 100%;
     height: 100vh;
